# algebra-solver

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
services/CAS/: CMakeLists.txt
services/CAS/src/: binding.cpp  main.cpp
services/CAS/src/core/lexer/: Lexer.cpp  Token.cpp  Token.h
services/CAS/src/core/parser/: Nodes.h  Parser.cpp  Parser.h
services/CAS/src/core/solver/: EquationSolver.cpp  EquationSolver.h  Evaluation.cpp  Evaluation.h  Isolater.cpp  Isolater.h  Isolator.cpp  Isolator.h  Simplifier.cpp  Simplifier.h
services/CAS/src/network/: SocketClient.cpp  SocketClient.h
services/CAS/src/test/: Tester.h  test.cpp
services/CAS/src/utils/: ASTUtils.cpp  ASTUtils.h  Config.h  Debug.cpp  Debug.h  Math.cpp  Math.h
src/: EquationSolver.cpp  EquationSolver.h  Evaluation.cpp  Evaluation.h  Lexer.cpp  Lexer.h  Nodes.h  Parser.cpp  Parser.h  Token.cpp  Token.h  main.cpp
src/core/lexer/: Token.cpp  Token.h
src/core/parser/: Parser.cpp
src/core/solver/: EquationSolver.cpp  EquationSolver.h
src/utils/: Debug.cpp  Debug.h  Math.h
webserver/backend/: Dockerfile  requirements.txt
webserver/backend/src/: main.py  structures.py
webserver/frontend/: index.html  package-lock.json  package.json
webserver/frontend/src/: App.css  App.tsx  index.css
